--- a/littleReaders/Info.plist
+++ b/littleReaders/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>ITSAppUsesNonExemptEncryption</key>
+    <false/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>FuturaStd-Condensed.otf</string>
@@ -11,6 +13,7 @@
 		<string>GardenHouseRom.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
+    
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
 		<false/>
